# edge-agent

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
companions/mac/macos-hub/: Cargo.toml  README.md  macos-hub.toml.example
companions/mac/macos-hub/launchd/: com.shin1ohno.macos-hub.plist
companions/mac/macos-hub/src/: command_handler.rs  config.rs  core_audio.rs  core_audio_stub.rs  main.rs  media_keys.rs  media_keys_stub.rs  mqtt.rs
configs/: example.toml  pro.toml
crates/adapter-hue/: Cargo.toml
crates/adapter-hue/src/: adapter.rs  api.rs  cache.rs  discovery.rs  events.rs  lib.rs  pair.rs  types.rs
crates/adapter-roon/: Cargo.toml
crates/adapter-roon/src/: lib.rs
crates/edge-agent/: CHANGELOG.md  Cargo.toml
crates/edge-agent/src/: config.rs  glyphs.rs  hue_token.rs  main.rs  pair_hue.rs
crates/edge-agent/src/adapter_hue/: adapter.rs  api.rs  cache.rs  events.rs  mdns.rs  mod.rs  pair.rs  resolver.rs  types.rs
crates/edge-agent/src/adapter_macos/: adapter.rs  mod.rs  mqtt.rs  types.rs
crates/edge-agent/src/adapter_macos_music/: adapter.rs  mod.rs  now_playing.rs  osascript.rs
crates/edge-agent/src/adapter_roon/: mod.rs
crates/edge-agent/src/edge_core/: intent.rs  mod.rs  registry.rs  routing.rs  ws_client.rs
crates/edge-agent/src/wifi/: linux.rs  macos.rs  mod.rs
crates/edge-core/: CHANGELOG.md  Cargo.toml
crates/edge-core/src/: adapter.rs  cache.rs  device_control.rs  intent.rs  lib.rs  registry.rs  routing.rs  ws_client.rs
crates/nuimo-protocol/: CHANGELOG.md  Cargo.toml
crates/nuimo-protocol/src/: font.rs  lib.rs
crates/nuimo-protocol/tests/: golden.rs
crates/weave-contracts/: CHANGELOG.md  Cargo.toml  README.md
crates/weave-contracts/src/: lib.rs
crates/weave-ios-core/: CHANGELOG.md  Cargo.toml  build.rs
crates/weave-ios-core/src/: adapter_ios_media.rs  cache.rs  device_control.rs  edge_client.rs  feedback_pump.rs  glyph_registry.rs  lib.rs  ui_client.rs
docs/: config-example.toml  ios-install.md
ios/: .gitignore  README.md  build-xcframework.sh  deploy.sh  project.yml
ios/WeaveIos/: Info.plist  WeaveIosApp.swift
ios/WeaveIos/Core/: BleBridge.swift  DeviceControlBridge.swift  EdgeClientHost.swift  IosMediaDispatcher.swift  LedFeedbackBridge.swift  NowPlayingObserver.swift  NuimoDevice.swift  SettingsStore.swift  UiClientHost.swift  WeaveTypes.swift
ios/WeaveIos/Views/: ConnectionsView.swift  GlyphEditorView.swift  GlyphListView.swift  HomeView.swift  MappingsListView.swift  RootView.swift  SettingsView.swift
packaging/macos/: com.shin1ohno.edge-agent.plist
