[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.15.0"
edition = "2021"
license = "MIT"
authors = ["Shin'ichi Ohno <sh1@mercari.com>"]
repository = "https://github.com/shin1ohno/edge-agent"
homepage = "https://github.com/shin1ohno/edge-agent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
