[package]
name = "adapter-hue"
description = "Philips Hue v2 service adapter for edge-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
edge-core = { path = "../edge-core" }
weave-contracts = { path = "../weave-contracts" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
bytes = "1"
