[package]
name = "adapter-roon"
description = "Roon service adapter for edge-agent, using roon-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
edge-core = { path = "../edge-core" }
weave-contracts = { path = "../weave-contracts" }
roon-api = { path = "../../../roon-rs/crates/roon-api" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
