[package]
name = "edge-agent"
description = "Device-host agent bridging IoT devices to services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
edge-core = { path = "../edge-core" }
weave-contracts = { path = "../weave-contracts" }
nuimo = "0.1.0"
adapter-roon = { path = "../adapter-roon", optional = true }
adapter-hue = { path = "../adapter-hue", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"

[features]
default = ["roon"]
roon = ["dep:adapter-roon"]
hue = ["dep:adapter-hue"]
