[package]
name = "edge-core"
description = "Routing engine, adapter trait, and WebSocket client for edge-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
weave-contracts = { path = "../weave-contracts" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
