[package]
name = "weave-contracts"
description = "WebSocket protocol types shared between edge-agent and weave-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
