[package]
name = "weave-ios-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UniFFI wrapper exposing edge-core and nuimo-protocol to the weave iOS/iPad app. Not intended for non-Swift consumers."

# staticlib for the iOS xcframework; cdylib so host-side uniffi-bindgen can
# inspect the library; lib so Rust consumers (tests) can depend on it.
[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
nuimo-protocol = { version = "0.5", path = "../nuimo-protocol" }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29", features = ["tokio", "cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
