[package]
name = "weave-ios-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UniFFI wrapper exposing edge-core and nuimo-protocol to the weave iOS/iPad app. Not intended for non-Swift consumers."

# staticlib for the iOS xcframework; cdylib so host-side uniffi-bindgen can
# inspect the library; lib so Rust consumers (tests) can depend on it.
[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
edge-core = { version = "0.8", path = "../edge-core" }
nuimo-protocol = { version = "0.8", path = "../nuimo-protocol" }
weave-contracts = { version = "0.8", path = "../weave-contracts" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29", features = ["tokio", "cli"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
